<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactsManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile</string>
    <string name="home_no">Home</string>
    <string name="work_no">Work</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="job">Job</string>
    <string name="add">Save Contact</string>

</resources>